# sea-orm-sqlite-uuid-issue

./: Cargo.toml  README.md  db.sqlite  run.sh
src/: main.rs
