[package]
name = "sea-orm-sqlite-uuid-issue"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { version = "0.11" }
log        = { version = "0.4" }
tokio      = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v7"] }

[dependencies.sea-orm]
features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "debug-print",
    "entity-registry",
    "schema-sync",
]
version = "2.0.0-rc"
